Redux and Router

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
+/*Defaults*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+
+}
+
+/*Main Section*/
+
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.ui-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 5rem;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+  
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.pages {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page-item {
+  background: #ffa600;
+  margin-right: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
 }
+
+/*Media Queries*/
