--- a/src/components/pages/Homepage.module.css
+++ b/src/components/pages/Homepage.module.css
@@ -12,17 +12,17 @@
 .menu {
     position: relative;
     margin: 2rem;
-    max-height: 70vh;
+    max-height: 65vh;
     overflow: auto;
 }
 
 .menushadow {
     position: fixed;
     border-radius: 1rem;
-    width: 90vw;
+    width: calc(100vw - 2rem);
     height: 72.5vh;
     top: 9rem;
-    left: 5vw;
+    left: 0;
     align-items: center;
     justify-content: center;
     
@@ -32,6 +32,8 @@
     box-shadow: inset 0px 0px 25px 0px rgba(0,0,0,0.1);
     z-index: 5;
     pointer-events: none;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .item {
@@ -45,4 +47,8 @@
 
 .item h3 {
     color: black;
+}
+
+.item:active {
+    height: 10em;
 }
