--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,51 @@ body,
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+/*Landing Page*/
+
+section {
+  padding: 3em
+}
+
+.landing-page {
+  text-align: center;
+}
+
+.intro {
+  background: rgb(218, 218, 218);
+}
+
+  .intro img {
+    width: 100%;
+  }
+  /*Title*/
+  .intro h1 {
+    padding-bottom: 2em;
+
+  }
+
+  .intro h2 {
+    padding: 1em;
+    color: rgb(107, 107, 107);
+    font-size: 1em;
+    letter-spacing: 0.2em;
+  }
+
+  .intro button {
+    padding: 1em;
+    margin: 2em;
+  }
+
+.explanation {
+  background: #fdf3f3;
+}
+
+  .explanation ul {
+    padding: 2em;
+    line-height: 200%;
+  }
+
+
 /*Main Section*/
 
 .App {
@@ -28,19 +73,32 @@ body,
   height: 100%;
 }
 
+.badge-container {
+  position: fixed;
+  z-index: 3;
+  top: 20%;
+  left: calc(50% - 2.5em);
+}
+
+.badge-container img {
+  height: 5em;
+}
 
 
 .ui-container {
   position: fixed;
   width: 100vw;
   height: 100vh;
-  top: 5rem;
+  top: 3.5rem;
   align-items: center;
   justify-content: center;
-  
-  
-  z-index: 3;
+  background: rgba(0,0,0,0.50);
+  color: rgb(0, 0, 0);
+  z-index: 5;
+  overflow-y: scroll;
+  padding-bottom: 5em;
 }
+
 
 .pages {
   display: flex;
@@ -50,10 +108,11 @@ body,
 }
 
 .page-item {
-  background: #ffa600;
   margin-right: 0.5rem;
   padding: 0.5rem;
   border-radius: 0.2rem;
+  font-weight: bold;
+  color: white;
 }
 
 .background {
@@ -63,7 +122,7 @@ body,
   width: 100vw;
   height: 100vh;
   background: rgba(0,0,0,0.20);
-  z-index: 4;
+  z-index: 2;
 }
 
 .infobox {
@@ -73,7 +132,7 @@ body,
   margin: -50px -50px -50px -10rem;
   position:absolute;
   background-color:white;
-  z-index:5;
+  z-index:3;
   border-radius:1em;
   padding:3em;
   -webkit-box-shadow: 0px 0px 28px 0px rgba(0,0,0,0.75);
