--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,7 +2,8 @@
     width: 100vw;
     position: fixed;
     z-index: 3;
-    background: rgba(0,0,0,0.50);
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,0.4) 0%, rgba(255,255,255,0) 70%);
 }
 
 .experienceContainer {
