--- a/src/components/pages/UserInterface.module.css
+++ b/src/components/pages/UserInterface.module.css
@@ -19,7 +19,7 @@
 
 }
 
-.overworld {
+.container button {
     background-color: #ebe9e4;
     border: 5px solid white;
     border-radius: 1em;
@@ -130,7 +130,58 @@
     padding: 1em;
 }
 
+.infoContainer {
+    margin: 2em;
+}
 
+    .info {
+        display: flex;
+        flex-direction: row;
+        background: whitesmoke;
+        border: solid 2px white;
+    }
+
+    .info h3 {
+        color: rgb(51, 51, 51);
+    }
+
+    .info article {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .info img {
+        height: 5em;
+    }
+
+.badgesContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+    .badge {
+        padding: .5em;
+    }
+
+    .badge img {
+        width: 3em;
+    }
+
+    .badge p {
+        font-weight: bold;
+        color: white;
+    }
+
+.leaderboard {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background: black;
+    border: 1px solid white;
+    margin: 1em 2em 0em 2em;
+    color: white;
+}
 
 /*Media Queries*/
 
