--- a/src/components/pages/UserInterface.module.css
+++ b/src/components/pages/UserInterface.module.css
@@ -1,6 +1,15 @@
 .container {
-    display: grid;
-    
+    background: rgb(255,255,255, 0.2);
+    padding: 1em 1em 3em 1em;
+}
+
+.container button {
+    display:inline-block;
+    width: 100%;
+    background-color: #ebe9e4;
+    border: 5px solid white;
+    border-radius: 1em;
+    padding: 1em;
 }
 
 .exit button {
@@ -16,21 +25,14 @@
 
 .subtitle {
     color: white;
-
+    padding: 0.5em;
 }
 
-.container button {
-    background-color: #ebe9e4;
-    border: 5px solid white;
-    border-radius: 1em;
-    padding: 1em;
-    margin: 1.8em;
-}
+
 
 .menu {
     position: relative;
     display: flex;
-    margin: 1rem;
     max-height: 65vh;
     overflow: auto;
     border-radius: 2rem;
@@ -42,7 +44,7 @@
     border-radius: 1rem;
     width: calc(100vw - 2rem);
     height: 20em;
-    top: 15rem;
+    top: 13rem;
     left: 0;
     align-items: center;
     justify-content: center;
@@ -63,6 +65,7 @@
     margin-bottom: 1.5rem;
     padding: 1rem;
     margin: 0.5em;
+    color: black;
 }
 
 .inner {
@@ -100,13 +103,23 @@
     }
 
 .badgesContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: grid;
+    grid-gap: 0.2em;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .badge {
     padding: .5em;
+}
+
+.description {
+    position: fixed;
+    font-weight: bold;
+    z-index: 8;
+    color: whitesmoke;
+    background-color: rgb(63, 63, 63);
+    border-radius: 1em;
+    pointer-events: none;
 }
 
 .badge img {
@@ -122,7 +135,6 @@
     color: rgb(24, 24, 24);
     background-color: white;
     border: 2px solid black;
-    margin: 2em;
     padding: 1em;
 }
 
@@ -131,7 +143,8 @@
 }
 
 .infoContainer {
-    margin: 2em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
     .info {
@@ -139,13 +152,15 @@
         flex-direction: row;
         background: whitesmoke;
         border: solid 2px white;
+        margin: 1em;
+        color: black;
     }
 
     .info h3 {
         color: rgb(51, 51, 51);
     }
 
-    .info article {
+    .info figure {
         display: flex;
         flex-direction: column;
     }
@@ -155,9 +170,8 @@
     }
 
 .badgesContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr) )
 }
 
     .badge {
@@ -173,15 +187,20 @@
         color: white;
     }
 
-.leaderboard {
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
+/*Leaderboard Page*/
+
+.leaderboard, th, td {
+    width: 100%;
     background: black;
     border: 1px solid white;
-    margin: 1em 2em 0em 2em;
     color: white;
 }
+
+    .leaderboard th, td {
+        padding: 1em;
+    }
+
+
 
 /*Media Queries*/
 
