glassmorphism and more

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,28 @@ body,
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(255, 255, 255) rgb(255, 255, 255);
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: none;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
+  
+}
+
 /*Landing Page*/
 
 .landing-page {
@@ -32,6 +54,10 @@ body,
   padding: 1em;
 }
 
+.landing-page h2 {
+  font-weight: bold;
+  padding: 2em 2em;
+}
 
 .landing-page section {
   flex-direction: column;
@@ -45,21 +71,23 @@ body,
 .landing-page section ul {
   padding: 2em;
   line-height: 350%;
-
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .landing-page footer {
   display: flex;
   justify-content: center;
   background: rgb(136, 136, 136);
-  padding: 2em 2em 10em 2em;
+  padding: 2em 2em 5em 2em;
   color: white;
   flex-direction: column;
 }
 
 .landing-page footer p {
   align-items: center;
-  margin-right: 2em;
+  padding-bottom: 1em;
   
 }
 
@@ -67,6 +95,29 @@ body,
   color: white;
   font-weight: bold;
   text-decoration: none;
+}
+
+.explanation {
+  flex-direction: row-reverse;
+}
+
+/* Video */
+
+.video {
+  flex-grow: 1;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -127,6 +178,7 @@ body,
   color: rgb(255, 255, 255);
   z-index: 6;
   overflow-y: scroll;
+  backdrop-filter: blur(20px);
 }
 
 
@@ -222,9 +274,13 @@ body,
     width: 50vw;
     max-height: 80vh;
     height: unset;
-    top: 8.5vh;
+    top: 13vh;
     right: 5vw;
     border-radius: 3em;
+  }
+
+  .landing-page h2 {
+    padding: 0;
   }
 
   .landing-page section {
@@ -234,6 +290,15 @@ body,
   .landing-page footer {
     flex-direction: row;
     
+  }
+
+  .landing-page footer p {
+    margin-right: 2em;
+    padding: 0;
+  }
+
+  .video {
+    padding: 2em;
   }
 
 }
