--- a/src/components/QuizTemplate.module.css
+++ b/src/components/QuizTemplate.module.css
@@ -52,7 +52,9 @@
 
     .inner figure {
         height: 6em;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
         -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
         box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
