--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -19,6 +19,11 @@
     padding: 1rem;
 }
 
+.header h3 {
+    color: #f7f2f0;
+    filter: drop-shadow(0px 4px 0px #77779eb6);
+}
+
 .experience {
     display: flex;
     flex-direction: column;
@@ -34,6 +39,11 @@
 .home {
     width: 2em;
     height: 2em;
+    padding: 1em;
+    border-radius: 2em;
+    background: rgb(255,220,255,0.2);
+    backdrop-filter: blur(20px);
+    border: 1px solid white;
 }
 
 .notifications {
@@ -42,6 +52,7 @@
     top: -20%;
     border-radius: 50%;
     background-color: tomato;
+    color: black;
     width: 1.3em;
     z-index: 6;
 }
