--- a/src/components/LevelSelect.module.css
+++ b/src/components/LevelSelect.module.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
 
     padding: 1em;
+    background: rgb(255,255,255,0.2);
+    border: 2px solid white;
+    border-radius: 2em;
+    backdrop-filter: blur(20px);
 }
 
 .container header {
@@ -24,7 +28,8 @@
 }
 
 .container h1 {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
+    filter: drop-shadow(0px 4px 0px #77779eb6);
 }
 
 .container h2 {
@@ -33,6 +38,7 @@
 
 .container p {
     padding-bottom: 2em;
+    line-height: 1.5;
 }
 .levels {
     display: grid;
@@ -46,6 +52,6 @@
     justify-content: center;
     align-items: center;
     height: 4em;
-    border-radius: 0.2em;
-    background: cornsilk;
+    border-radius: 0.8em;
+    background: white;
 }
