--- a/src/components/Tutorial.module.css
+++ b/src/components/Tutorial.module.css
@@ -12,16 +12,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    background: rgb(255,255,255,0.4);
+    border: 1px solid rgb(255,255,255,0.7);
+    border-radius: 2em;
+    backdrop-filter: blur(20px);
   }
   
   .container h1 {
-    margin-bottom: 2em;
+    margin-bottom: 0.5em;
+    color: #f7f2f0;
+    filter: drop-shadow(0px 4px 0px #77779eb6);
   }
   
   .container p {
     font-size: 0.9em;
     padding: 1em;
-    color: #696969;
+    color: #f7f2f0;
   }
 
   .container .buttonContainer {
@@ -37,6 +44,7 @@
   
   .container .inner {
     overflow-y: scroll;
+    background: rgb(50,50,50, 0.6);
   }
 
 .background {
