--- a/src/components/QuizTemplate.module.css
+++ b/src/components/QuizTemplate.module.css
@@ -2,45 +2,60 @@
     --margin: 3em;
 }
 
-.window {
-    position: fixed;
-    z-index: 8;
-    
-    width: calc(100vw - var(--margin));
-    height: calc(100vh - var(--margin));
-    top: calc(var(--margin) / 2);
-    left: calc(var(--margin) / 2);
-}
 
 .container {
+    z-index: 8;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     display: flex;
     flex-direction: column;
 
-    padding: 1em;
-    width: 100%;
-    height: 100%;
+    padding: 0.4em;
+    width: 1000px;
+    height: 750px;
+    max-width: 90vw;
+    max-height: 90vh;
     background: white;
     border-radius: 2em;
 }
 
-    .container header {
+    .container nav {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
     }
 
-    .container header button {
-        background: red;
-        width: 2em;
-        height: 2em;
+        .container nav button {
+            background: var(--secondary);
+            font-weight: bold;
+            color: white;
+            border-radius: 2em;
+            width: 2em;
+            height: 2em;
+            margin: 1em;
+        }
+
+    .container header {
+        text-align: center;
     }
 
 .inner {
     display: flex;
-    height: 100%;
+    margin: 0.5em;
+    
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 4;
 }
+
+    .inner button {
+        padding: 1em;
+        font-size: 1.5em;
+        margin: 1em;
+        border: 2px solid black;
+    }
 
     .inner article {
         display: grid;
@@ -63,3 +78,13 @@
     .inner h2 {
         padding-bottom: 2em;
     }
+
+.background {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.65);
+    z-index: 7;
+}
