--- a/src/components/stages/Allergies.module.css
+++ b/src/components/stages/Allergies.module.css
@@ -3,8 +3,13 @@
     position: fixed;
     bottom: 0;
     border-radius: 0.5em 1em 0em 0em;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
+}
+
+.container header {
+    
+    background-color: rgb(207, 207, 207);
 }
 
 .scrollbar {
@@ -69,7 +74,7 @@ display: flex;
 }
 
 .scrollDown {
-    margin: 3.5em 1em 1em 1em;
+    margin: 20em 1em 1em 1em;
     padding: 1em;
     background-color: #d7dde2;
     border-radius: 1em;
@@ -89,24 +94,46 @@ display: flex;
 
 .chart {
     position: absolute;
-
-    top: 150px;
-    left: calc(50% - 3em);
-    z-index: 3;
-
-    background: white;
-    padding: 1em;
+    right: 3em;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    background:whitesmoke;
+    
 }
+
+    .chart header {
+        
+        background-color: rgb(207, 207, 207);
+        color: black;
+    }
 
     .chart section {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 2em;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        max-width: 90vw;
+        overflow-y: auto;
+        grid-gap: 1em;
     }
 
     .chart figure {
-        padding: 2em;
+        padding: 0.5em;
         border-radius: 2em;
+        background-color: rgb(0, 99, 2);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .chart p {
+        background: white;
+        border-radius: 0.5em
+    }
+
+    .chart img {
+        padding: 0.5em;
+        height: 4em;
     }
 
 /* Media Queries */
@@ -118,6 +145,34 @@ display: flex;
         min-width: 350px;
         width: 30vw;
     }
+
+    .chart {
+        flex-direction: column-reverse;
+        bottom: 0em;
+    }
+
+    
+    /* Works on Firefox */
+    .container {
+        scrollbar-width: thin;
+        scrollbar-color: white white;
+    }
+    
+    /* Works on Chrome, Edge, and Safari */
+    .scrollbar::-webkit-scrollbar {
+        width: 15px;
+        height: 15px;
+    }
+    
+    .scrollbar::-webkit-scrollbar-track {
+        background: none;
+    }
+    
+    .scrollbar::-webkit-scrollbar-thumb {
+        background-color: white;
+        border-radius: 20px;
+        border: 1px solid black;
+    }
     
   }
 
@@ -128,6 +183,28 @@ display: flex;
     height: 30vh;
     
     }
+
+    .chart {
+        right: 1em;
+        top: 3.5em;
+        grid-template-columns: 1fr 1fr 1fr;
+        overflow: hidden;
+    }
+
+        .chart p {
+            font-size: 0.8em;
+        }
+
+        .chart section {
+            grid-gap: 0.4em;
+            padding: 1em;
+            box-sizing: content-box;
+        }
+
+        .chart img {
+            height: 2em;
+            padding: 0.2em;
+        }
 
 }
 
