--- a/src/components/stages/HealthAndSafety.module.css
+++ b/src/components/stages/HealthAndSafety.module.css
@@ -7,9 +7,10 @@
     width: 100px;
     height: 100px;
     transform: translate(-50%, 0%);
-    /* background: rgb(225,255,255, 0.8);
-    backdrop-filter: blur(5px); 
-    clip-path: circle(200%);*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
 }
 
     .progress .ring {
@@ -18,15 +19,37 @@
         color: white;
         left: 50%;
         transform: translate(-50%, 0%);
+
+        width: 100;
+        height: 100;
+        fill: none;
     }
+
+        .ring circle {
+            stroke-dasharray: 628;
+            fill: none;
+            stroke: white;
+            stroke-width: 1;
+        }
 
     .progress .stroke {
         position: absolute;
         z-index: 2;
         color: white;
         left: 50%;
+        fill: none;
         transform: translate(-50%, 0%);
     }
+
+        .stroke circle {
+            width: 100;
+            height: 100;
+            fill: none;
+            stroke-dasharray: 314;
+            fill: rgb(255,255,255, 0.2);
+            stroke: rgb(34, 58, 192);
+            stroke-width: 3;
+        }
 
 .navigation {
     z-index: 3;
