--- a/src/App.css
+++ b/src/App.css
@@ -340,13 +340,15 @@ h3 {
 
 .infobox .inner {
   overflow-y: auto;
-  border: 1px solid;
+  border: 1px solid #d0d0d0;
+  margin: 1em 0em;
   padding: 0.3em;
   max-height: 30vh;
 }
   
-  .infobox h1 {
+  .infobox h2 {
     margin: 0.5em;
+    padding: 0.5em;
   }
 
   .infobox p {
