--- a/src/components/pages/UserInterface.module.css
+++ b/src/components/pages/UserInterface.module.css
@@ -340,6 +340,7 @@
         color: rgb(39, 39, 39);
         font-size: 0.8em;
         width: 100%;
+        margin: 1em;
     }
 
     .quiz aside > header {
