--- a/src/components/stages/Allergies.module.css
+++ b/src/components/stages/Allergies.module.css
@@ -23,21 +23,27 @@
 }
 
 .timer {
-    background: rgb(245, 55, 55);
-    position: fixed;
     z-index: 3;
-    top: 20%;
+    
+    position: fixed;
+    
+    top: 10%;
     left: calc(50% - 2.5em);
+    width: 8em;
+    height: 8em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(245, 55, 55);
     color: white;
-    width: 5em;
-    height: 5em;
     border-radius: 5em;
-    border: solid 5px white;
+    border: solid 1px white;
   }
 
   .timer h1 {
       position: relative;
-      top: 20%;
+      filter: drop-shadow();
   }
 
 .title {
@@ -94,7 +100,7 @@ display: flex;
 
 .chart {
     position: absolute;
-    right: 3em;
+    right: 6em;
     z-index: 2;
     display: flex;
     flex-direction: column;
