--- a/src/components/QuizTemplate.module.css
+++ b/src/components/QuizTemplate.module.css
@@ -88,3 +88,10 @@
     background: rgba(0,0,0,0.65);
     z-index: 7;
 }
+
+@media only screen and (max-width: 768px) {
+    .inner article {
+        grid-gap: .1em;
+        margin: .1em;
+    }
+}
