--- a/src/components/pages/UserInterface.module.css
+++ b/src/components/pages/UserInterface.module.css
@@ -2,6 +2,7 @@
 /*Header*/
 
 .headerContainer {
+    pointer-events: none;
     width: 100vw;
     position: fixed;
     z-index: 5;
@@ -35,6 +36,7 @@
 }
 
 .exit {
+    pointer-events: all;
     box-sizing: content-box;
     display: flex;
     justify-content: center;
@@ -55,6 +57,7 @@
 }
 
 .home {
+    pointer-events: all;
     width: 1.5em;
     height: 1.5em;
     padding: 0.5em;
@@ -65,6 +68,7 @@
 }
 
 .notifications {
+    pointer-events: all;
     position: relative;
     left: 100%;
     top: -20%;
